Added animation to portfolio section

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-lightbox": "^2.0.0",
     "ngx-owl-carousel-o": "^2.0.1",
     "rxjs": "~6.4.0",
+    "shufflejs": "^5.2.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
