--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "buildProd": "ng build --prod --base-href \"/portfolio/\"",
+    "deploy": "ngh --dir=dist/portfolio"
   },
   "private": true,
   "dependencies": {
