--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "styles": [
               "./node_modules/font-awesome/css/font-awesome.min.css",
               "./node_modules/materialize-css/dist/css/materialize.min.css",
+              "./node_modules/animate.css/animate.min.css",
               "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "./node_modules/ngx-lightbox/lightbox.css",
@@ -39,6 +40,7 @@
             ],
             "scripts": [
               "./node_modules/materialize-css/dist/js/materialize.min.js",
+              "./node_modules/wowjs/dist/wow.min.js",
               "./node_modules/imagesloaded/imagesloaded.pkgd.min.js",
               "./node_modules/marked/lib/marked.js",
               "./node_modules/prismjs/prism.js",
