--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "animate.css": "^3.7.2",
     "font-awesome": "^4.7.0",
     "imagesloaded": "^4.1.4",
     "materialize-css": "^1.0.0",
@@ -31,6 +32,7 @@
     "rxjs": "~6.4.0",
     "shufflejs": "^5.2.3",
     "tslib": "^1.10.0",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
