--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "imagesloaded": "^4.1.4",
     "materialize-css": "^1.0.0",
     "ngx-disqus": "^2.4.3",
-    "ngx-lightbox": "^2.1.1",
-    "ngx-markdown": "^8.2.1",
-    "ngx-owl-carousel-o": "^2.0.3",
+    "ngx-lightbox": "^2.1.2",
+    "ngx-markdown": "^8.2.2",
+    "ngx-owl-carousel-o": "^2.1.0",
     "rxjs": "~6.4.0",
     "shufflejs": "^5.2.3",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.1",
     "wowjs": "^1.1.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.22",
-    "@angular/cli": "^8.3.22",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
@@ -50,8 +50,8 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
