--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "./node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "./node_modules/ngx-lightbox/lightbox.css",
-              "./node_modules/prismjs/themes/prism-okaidia.css",
+              "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css",
+              "src/assets/css/prism-themes/prismjs-alloy.css",
               "src/assets/css/css_002.css",
               "src/assets/css/css_003.css",
               "src/assets/css/css.css",
@@ -44,6 +45,7 @@
               "./node_modules/imagesloaded/imagesloaded.pkgd.min.js",
               "./node_modules/marked/lib/marked.js",
               "./node_modules/prismjs/prism.js",
+              "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js",
               "./node_modules/prismjs/components/prism-csharp.min.js",
               "./node_modules/prismjs/components/prism-css.min.js",
               "./node_modules/prismjs/components/prism-typescript.min.js"
