--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          npm install
-          npm run build:github
+          yarn install
+          yarn build:github
           cp dist/portfolio/index.html dist/portfolio/404.html
 
       - name: Deploy 🚀
