feat(blog): added copy to clipboard plugin

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "./node_modules/img-comparison-slider/dist/styles.css",
               "src/assets/css/prism-themes/material-darker.css",
               "src/assets/css/prism-themes/prism-line-numbers.css",
+              "src/assets/css/prism-themes/prism-toolbar.css",
               "src/assets/css/css_002.css",
               "src/assets/css/css_003.css",
               "src/assets/css/css.css",
@@ -49,6 +50,8 @@
               "./node_modules/marked/lib/marked.js",
               "./node_modules/prismjs/prism.js",
               "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js",
+              "./node_modules/prismjs/plugins/toolbar/prism-toolbar.js",
+              "./node_modules/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.js",
               "./node_modules/prismjs/components/prism-csharp.min.js",
               "./node_modules/prismjs/components/prism-css.min.js",
               "./node_modules/prismjs/components/prism-typescript.min.js",
